Make it possible to use various sources of data
