# atm-locator/src/main/webapp/specs/swagger.json
@@ -2,7 +2,7 @@
     "swagger": "2.0",
     "info": {
         "version": "1.0.0",
-        "title": "ING ATM Locator",
+        "title": "ATM Locator",
         "description": "#### ATM Locator is an internet portal that acts as an interface to actual locations of ATM belonging to ING bank.\n"
     },
     "schemes": [
@@ -13,9 +13,12 @@
     "paths": {
         "/login": {
             "post": {
+                "tags": [
+                    "Sign in"
+                ],
                 "responses": {
                     "200": {
-                        "description": "Sign in POST request"
+                        "description": "Sign in via POST request"
                     }
                 },
                 "parameters": [
@@ -40,8 +43,15 @@
                 ]
             }
         },
-        "/atm/raw": {
+        "/atm/{bank}/raw": {
             "parameters": [
+                {
+                    "name": "bank",
+                    "in": "path",
+                    "description": "Bank",
+                    "type": "string",
+                    "required": true
+                },
                 {
                     "name": "city",
                     "in": "query",
@@ -51,15 +61,25 @@
                 }
             ],
             "get": {
+                "tags": [
+                    "Raw"
+                ],
                 "responses": {
                     "200": {
-                        "description": "Search nearest ING ATM by city."
+                        "description": "Search nearest ING ATM by city. The response is in JSON original format"
                     }
                 }
             }
         },
-        "/atm/search": {
+        "/atm/{bank}/search": {
             "parameters": [
+                {
+                    "name": "bank",
+                    "in": "path",
+                    "description": "Bank",
+                    "type": "string",
+                    "required": true
+                },
                 {
                     "name": "city",
                     "in": "query",
@@ -69,9 +89,12 @@
                 }
             ],
             "get": {
+                "tags": [
+                    "Simple"
+                ],
                 "responses": {
                     "200": {
-                        "description": "Search nearest ING ATM by city"
+                        "description": "Search nearest ING ATM by city. The response is in JSON simplified format. It only contains number of values - street, post code, city"
                     }
                 }
             }
